--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@crustio/type-definitions": "1.1.0",
-    "@polkadot/api": "^7.2.1",
+    "@polkadot/api": "^4.2.2-4",
     "body-parser": "^1.19.0",
     "connect-timeout": "^1.9.0",
     "express": "^4.17.1",
