--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "compile": "tsc",
     "fix": "gts fix"
   },
+  "workspaces": [
+    "packages/*"
+  ],
   "dependencies": {
-    "@crustio/type-definitions": "1.1.0",
     "@polkadot/api": "^4.2.2-4",
     "body-parser": "^1.19.0",
     "connect-timeout": "^1.9.0",
